--- a/Supervised Machine Learning.ipynb
+++ b/Supervised Machine Learning.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Name - Prashant Maurya"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " # In this task, we will predict the percentage of marks that a student is expected to score based upon the number of hours studied using supervised machine learning algorithm linear regression."
    ]
   },
